--- a/src/scripts/data/assets/sc4evermore/21-other.yaml
+++ b/src/scripts/data/assets/sc4evermore/21-other.yaml
@@ -2,8 +2,8 @@ assets:
   sc4evermore/205-sc4d-lex-legacy-reddonquixote-compilation:
     authors:
       - Reddonquixote
-    category: 360
-    downloads: 482
+    category: landmarks
+    downloads: 485
     lastModified: 2023-12-15T16:18:41-08:00
     name: SC4D LEX Legacy - Reddonquixote Compilation (Dark Night)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/RDQ_HD_PropPack_Banner_Day.jpg
@@ -11,8 +11,8 @@ assets:
   sc4evermore/206-sc4d-lex-legacy-reddonquixote-compilation-maxis-night:
     authors:
       - Reddonquixote
-    category: 360
-    downloads: 417
+    category: landmarks
+    downloads: 420
     lastModified: 2023-12-15T16:18:56-08:00
     name: SC4D LEX Legacy - Reddonquixote Compilation (Maxis Night)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/RDQ_Rialto_Towers_Night_Banner.jpg
@@ -20,15 +20,15 @@ assets:
   sc4evermore/38-immortality-killer-by-ripplejet:
     authors:
       - sc4evermore
-    category: 360
-    downloads: 374
+    category: landmarks
+    downloads: 377
     lastModified: 2023-07-25T03:32:54-07:00
     name: Immortality Killer by RippleJet
     url: https://www.sc4evermore.com/index.php/downloads/download/21-other/38-immortality-killer-by-ripplejet
   sc4evermore/39-bsc-census-repository-building-by-ripplejet:
     authors:
       - sc4evermore
-    category: 360
+    category: landmarks
     dependencies: []
     description: "<body>\r
 
@@ -49,7 +49,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 865
+    downloads: 868
     filename: BSC RJ Census Repository Facility v3.5_1831.zip
     files:
       - _Documents/BSC_Readmes/RippleJet/Readme_Census_Repository_Facility_v3.5.htm
@@ -78,10 +78,10 @@ assets:
   sc4evermore/50-camelot-counter-by-ripplejet:
     authors:
       - sc4evermore
-    category: 360
-    downloads: 347
+    category: landmarks
+    downloads: 349
     lastModified: 2023-07-25T05:09:39-07:00
     name: CAMeLot Counter by RippleJet
     url: https://www.sc4evermore.com/index.php/downloads/download/21-other/50-camelot-counter-by-ripplejet
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
