--- a/src/scripts/data/assets/sc4evermore/40-maxis.yaml
+++ b/src/scripts/data/assets/sc4evermore/40-maxis.yaml
@@ -2,7 +2,7 @@ assets:
   sc4evermore/14-maxis-buildings-as-props-and-dlc-props-v2-1:
     authors:
       - Maxis
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -34,7 +34,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 2198
+    downloads: 2203
     filename: Maxis_Building_As_Props_and_DLC_Props_v2.1_3560.zip
     files:
       - _Documents/sc4buildingsaspropsvol2.jpg
@@ -63,8 +63,8 @@ assets:
   sc4evermore/235-maxis-plugins-landmarks-dlc:
     authors:
       - Maxis
-    category: 30
-    downloads: 355
+    category: mods
+    downloads: 359
     lastModified: 2024-01-23T09:05:26-08:00
     name: Maxis Plugins Landmarks DLC
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Maxis Landmarks DLC_1.jpg
@@ -72,8 +72,8 @@ assets:
   sc4evermore/53-maxis-day-of-peace-dlc:
     authors:
       - Maxis
-    category: 30
-    downloads: 390
+    category: mods
+    downloads: 393
     lastModified: 2023-12-06T07:43:13-08:00
     name: Maxis Day of Peace DLC
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Maxis pt3 day of peace.jpg
@@ -81,98 +81,98 @@ assets:
   sc4evermore/55-lot-editor:
     authors:
       - Maxis
-    category: 30
-    downloads: 287
+    category: mods
+    downloads: 291
     lastModified: 2023-08-20T05:44:58-07:00
     name: Lot Editor
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/55-lot-editor
   sc4evermore/68-update-for-simcity-4-vanilla-sku1:
     authors:
       - Maxis
-    category: 30
-    downloads: 251
+    category: mods
+    downloads: 253
     lastModified: 2023-07-29T04:02:51-07:00
     name: Update for SimCity 4 Vanilla (SKU1)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/68-update-for-simcity-4-vanilla-sku1
   sc4evermore/69-update-for-simcity-4-vanilla-sku2:
     authors:
       - Maxis
-    category: 30
-    downloads: 263
+    category: mods
+    downloads: 265
     lastModified: 2023-07-29T03:55:11-07:00
     name: Update for SimCity 4 Vanilla (SKU2)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/69-update-for-simcity-4-vanilla-sku2
   sc4evermore/70-update-for-simcity-4-vanilla-sku3:
     authors:
       - Maxis
-    category: 30
-    downloads: 195
+    category: mods
+    downloads: 197
     lastModified: 2023-07-29T03:58:51-07:00
     name: Update for SimCity 4 Vanilla (SKU3)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/70-update-for-simcity-4-vanilla-sku3
   sc4evermore/71-update-for-simcity-4-vanilla-sku4:
     authors:
       - Maxis
-    category: 30
-    downloads: 204
+    category: mods
+    downloads: 206
     lastModified: 2024-01-16T01:48:58-08:00
     name: Update for SimCity 4 Vanilla (SKU4)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/71-update-for-simcity-4-vanilla-sku4
   sc4evermore/72-update-for-simcity-4-vanilla-sku5:
     authors:
       - Maxis
-    category: 30
-    downloads: 216
+    category: mods
+    downloads: 218
     lastModified: 2023-07-29T04:02:27-07:00
     name: Update for SimCity 4 Vanilla (SKU5)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/72-update-for-simcity-4-vanilla-sku5
   sc4evermore/73-update-for-simcity-4-rush-hour-deluxe-sku1:
     authors:
       - Maxis
-    category: 30
-    downloads: 415
+    category: mods
+    downloads: 417
     lastModified: 2023-07-29T05:07:39-07:00
     name: Update for SimCity 4 Rush Hour / Deluxe (SKU1)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/73-update-for-simcity-4-rush-hour-deluxe-sku1
   sc4evermore/74-update-for-simcity-4-rush-hour-deluxe-sku2:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 438
+    category: mods
+    downloads: 441
     lastModified: 2023-07-29T05:18:16-07:00
     name: Update for SimCity 4 Rush Hour / Deluxe (SKU2)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/74-update-for-simcity-4-rush-hour-deluxe-sku2
   sc4evermore/75-update-for-simcity-4-rush-hour-deluxe-sku3:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 251
+    category: mods
+    downloads: 253
     lastModified: 2023-07-29T05:24:35-07:00
     name: Update for SimCity 4 Rush Hour / Deluxe (SKU3)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/75-update-for-simcity-4-rush-hour-deluxe-sku3
   sc4evermore/76-update-for-simcity-4-rush-hour-deluxe-sku4:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 337
+    category: mods
+    downloads: 339
     lastModified: 2023-07-29T05:26:43-07:00
     name: Update for SimCity 4 Rush Hour / Deluxe (SKU4)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/76-update-for-simcity-4-rush-hour-deluxe-sku4
   sc4evermore/77-update-for-simcity-4-rush-hour-deluxe-sku5:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 274
+    category: mods
+    downloads: 276
     lastModified: 2023-07-29T05:32:08-07:00
     name: Update for SimCity 4 Rush Hour / Deluxe (SKU5)
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/77-update-for-simcity-4-rush-hour-deluxe-sku5
   sc4evermore/78-nightlights-update:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 426
+    category: mods
+    downloads: 428
     lastModified: 2023-07-29T05:35:20-07:00
     name: Nightlights Update
     url: https://www.sc4evermore.com/index.php/downloads/download/40-maxis/78-nightlights-update
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
