--- a/src/scripts/data/assets/sc4evermore/42-dll-mods.yaml
+++ b/src/scripts/data/assets/sc4evermore/42-dll-mods.yaml
@@ -2,135 +2,135 @@ assets:
   sc4evermore/251-sc4-disable-cheats-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 93
+    category: mods/dll
+    downloads: 96
     lastModified: 2024-03-22T02:11:41-07:00
     name: SC4 Disable Cheats DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/251-sc4-disable-cheats-dll-plugin
   sc4evermore/252-humane-society-ordinance-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 97
+    category: mods/dll
+    downloads: 99
     lastModified: 2024-03-22T02:23:30-07:00
     name: Humane Society Ordinance DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/252-humane-society-ordinance-dll-plugin
   sc4evermore/253-legalize-gambling-ordinance-upgrade-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 107
+    category: mods/dll
+    downloads: 109
     lastModified: 2024-03-22T02:26:02-07:00
     name: Legalize Gambling Ordinance Upgrade DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/253-legalize-gambling-ordinance-upgrade-dll-plugin
   sc4evermore/254-sc4citydatesync-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 90
+    category: mods/dll
+    downloads: 94
     lastModified: 2024-03-22T02:29:25-07:00
     name: SC4CityDateSync DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/254-sc4citydatesync-dll-plugin
   sc4evermore/255-sc4moredemandinfo-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 111
+    category: mods/dll
+    downloads: 114
     lastModified: 2024-03-22T02:33:20-07:00
     name: SC4MoreDemandInfo DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/255-sc4moredemandinfo-dll-plugin
   sc4evermore/256-sc4autosave-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 107
+    category: mods/dll
+    downloads: 111
     lastModified: 2024-03-22T02:37:05-07:00
     name: SC4AutoSave DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/256-sc4autosave-dll-plugin
   sc4evermore/257-sc4disabledemolitionanimation-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 83
+    category: mods/dll
+    downloads: 87
     lastModified: 2024-03-22T02:58:58-07:00
     name: SC4DisableDemolitionAnimation DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/257-sc4disabledemolitionanimation-dll-plugin
   sc4evermore/258-sc4-full-screen-32-bit-color-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 119
+    category: mods/dll
+    downloads: 122
     lastModified: 2024-03-22T03:04:18-07:00
     name: SC4 Full Screen 32-bit Color DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/258-sc4-full-screen-32-bit-color-dll-plugin
   sc4evermore/259-sc4graphicsoptions-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 167
+    category: mods/dll
+    downloads: 170
     lastModified: 2024-03-22T03:03:31-07:00
     name: SC4GraphicsOptions DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/259-sc4graphicsoptions-dll-plugin
   sc4evermore/260-allow-more-building-styles-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 109
+    category: mods/dll
+    downloads: 112
     lastModified: 2024-03-22T03:37:07-07:00
     name: Allow More Building Styles DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/260-allow-more-building-styles-dll-plugin
   sc4evermore/261-sc4cpuoptions-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 119
+    category: mods/dll
+    downloads: 122
     lastModified: 2024-03-22T03:41:54-07:00
     name: SC4CPUOptions DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/261-sc4cpuoptions-dll-plugin
   sc4evermore/262-sc4disablelotplopsmoke-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 103
+    category: mods/dll
+    downloads: 106
     lastModified: 2024-03-22T03:49:58-07:00
     name: SC4DisableLotPlopSmoke DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/262-sc4disablelotplopsmoke-dll-plugin
   sc4evermore/263-sc4disablenetworkconstructionsounds:
     authors:
       - null45
-    category: 60
-    downloads: 76
+    category: mods/dll
+    downloads: 79
     lastModified: 2024-03-22T03:47:13-07:00
     name: SC4DisableNetworkConstructionSounds
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/263-sc4disablenetworkconstructionsounds
   sc4evermore/264-region-view-census-ui-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 128
+    category: mods/dll
+    downloads: 130
     lastModified: 2024-03-22T03:48:55-07:00
     name: Region View Census UI DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/264-region-view-census-ui-dll-plugin
   sc4evermore/265-no-kickout-lower-wealth-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 305
+    category: mods/dll
+    downloads: 312
     lastModified: 2024-03-22T03:57:09-07:00
     name: No Kickout Lower Wealth DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/265-no-kickout-lower-wealth-dll-plugin
   sc4evermore/266-growify-plopped-buildings-cheat-dll-plugin:
     authors:
       - null45
-    category: 60
-    downloads: 132
+    category: mods/dll
+    downloads: 135
     lastModified: 2024-03-22T03:58:56-07:00
     name: Growify Plopped Buildings Cheat DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/266-growify-plopped-buildings-cheat-dll-plugin
   sc4evermore/268-submenus-dll-plugin:
     authors:
       - memo
-    category: 60
+    category: mods/dll
     dependencies:
       - simtropolis/36242-resource-loading-hooks-dll-for-simcity-4
     description: "<body>\r
@@ -226,7 +226,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 269
+    downloads: 271
     images:
       - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/glr-submenu.jpeg
     lastModified: 2024-05-12T10:59:16-07:00
@@ -238,7 +238,7 @@ assets:
   sc4evermore/273-dgvoodoo-2-sc4-edition:
     authors:
       - sc4evermore
-    category: 60
+    category: mods/dll
     dependencies: []
     description: "<body>\r
 
@@ -294,7 +294,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 211
+    downloads: 213
     filename: DgVoodoo 2 SC4 Version.zip
     files:
       - DgVoodoo 2 SC4 Version/3c - NVIDIA GPU Fix.txt
@@ -323,7 +323,7 @@ assets:
   sc4evermore/278-sc4fix:
     authors:
       - simmaster07
-    category: 60
+    category: mods/dll
     dependencies: []
     description: "<body>\r
 
@@ -390,7 +390,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 308
+    downloads: 313
     images: []
     lastModified: 2024-06-19T03:57:16-07:00
     name: SC4Fix
@@ -398,4 +398,4 @@ assets:
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/278-sc4fix
     version: "8"
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
