--- a/src/scripts/data/assets/simtropolis/67-simcitybrasil-files.yaml
+++ b/src/scripts/data/assets/simtropolis/67-simcitybrasil-files.yaml
@@ -2,7 +2,7 @@ assets:
   simtropolis/11027-pao-de-acucar-supermarket:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-09T03:35:30Z
     name: Pao de Acucar supermarket
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2005/thumb-b3bf2521a4cbe6091eeb4542428afa25-stnoite1.jpg
@@ -10,7 +10,7 @@ assets:
   simtropolis/11255-fundacao-casa-de-jorge-amado:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:52:06Z
     name: Fundacao Casa de Jorge Amado
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2004/thumb-d1d38f0633ed06659cbb01954b438816-casadejorgeamado.jpg
@@ -18,7 +18,7 @@ assets:
   simtropolis/13603-edifico-italia:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:44:57Z
     name: Edifico Italia
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_09_2005/thumb-17c917972e2224142381abb98bbf4f09-italia.JPG
@@ -26,7 +26,7 @@ assets:
   simtropolis/15062-brasil-cellphones-shops:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-09-22T19:07:20Z
     name: Brasil Cellphones Shops
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_02_2006/thumb-40ec3d76e646fc731f6c7ec06cebb46c-diurno.jpg
@@ -34,7 +34,7 @@ assets:
   simtropolis/22202-sao-paulo-bus-stops:
     authors:
       - Klyte45
-    category: 0
+    category: mods
     lastModified: 2020-10-11T02:58:18Z
     name: Sao Paulo Bus Stops
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2009/thumb-576a866eb689a34b13ee8373af09f6cf-Thumb1.jpg
@@ -42,7 +42,7 @@ assets:
   simtropolis/23704-grand-palace-hotel:
     authors:
       - Giuliano40k--
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:25:09Z
     name: Grand Palace Hotel
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_04_2010/thumb-4adc9a3e272ddb87571fc5e098ba08d3-Point%20Lookout.jpg
@@ -50,7 +50,7 @@ assets:
   simtropolis/23851-middle-wealth-houses:
     authors:
       - Giuliano40k--
-    category: 0
+    category: mods
     lastModified: 2020-10-29T02:24:25Z
     name: Middle wealth houses
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2010/thumb-cd89cf8dd851a2a000313e2912aabdb7-a.jpg
@@ -58,7 +58,7 @@ assets:
   simtropolis/23992-solaris-tower:
     authors:
       - Giuliano40k--
-    category: 0
+    category: mods
     lastModified: 2020-10-29T02:14:08Z
     name: Solaris Tower
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2010/thumb-2c47aad51f16b2305cc48af8308354c0-b.jpg
@@ -66,7 +66,7 @@ assets:
   simtropolis/24299-konrad-bulding:
     authors:
       - Giuliano40k--
-    category: 0
+    category: mods
     lastModified: 2020-10-29T02:36:25Z
     name: Konrad Bulding
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2010/thumb-32634d93b2fbea9696bae0cdbb2fad90-Capturara.JPG
@@ -74,7 +74,7 @@ assets:
   simtropolis/2820-brasil-congresso-nacional:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-09-23T02:28:54Z
     name: Brasil Congresso Nacional
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_04_2004/thumb-4195c67371111815a2b9e59ec1505156-promocongresso1.jpg
@@ -82,7 +82,7 @@ assets:
   simtropolis/2869-brasil-corcovado:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-09-29T01:36:45Z
     name: Brasil Corcovado
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_04_2004/thumb-5d5ade08a6ed2b2536f1e5558a8c0406-cristo_2_0.jpg
@@ -90,7 +90,7 @@ assets:
   simtropolis/28703-brazilian-ambulance-samu:
     authors:
       - sliachticas
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:42:53Z
     name: Brazilian Ambulance SAMU
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2013/thumb-251ea28678c65273b9958b001372f6eb-samu.jpg
@@ -98,7 +98,7 @@ assets:
   simtropolis/2936-brasil-catedral-metropolitana-nossa-senhora-aparecida:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-06T02:00:42Z
     name: Brasil Catedral Metropolitana Nossa Senhora Aparecida
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_04_2004/thumb-20292eef57a2b06026a3255c8d2268c6-catedralpromocao1.jpg
@@ -106,7 +106,7 @@ assets:
   simtropolis/2993-masp-museu-de-arte-de-sao-paulo:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-10T10:46:58Z
     name: MASP Museu de Arte de Sao Paulo
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2004/thumb-87a7aad9e81b6021b7f8fce3fa30b3e1-masppromocionalfinal.jpg
@@ -114,11 +114,11 @@ assets:
   simtropolis/31109-flunight-props-vol-01-flora:
     authors:
       - flunight
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -145,7 +145,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -169,7 +168,8 @@ assets:
 
 
 
-      							
+
+
       <p style="margin-top:0px;color:rgb(39,42,52);font-family:Roboto,
       sans-serif;font-size:14px;font-style:normal;font-variant:normal;font-weight:normal;letter-spacing:normal;line-height:21px;text-indent:0px;text-transform:none;white-space:normal;word-spacing:0px;background-color:rgb(255,255,255);">
       	This pack contains props and Mayor Mode <span style="color:rgb(39,42,52);font-family:Roboto, sans-serif;font-size:14px;font-style:normal;font-variant:normal;font-weight:normal;letter-spacing:normal;line-height:21px;text-indent:0px;text-transform:none;white-space:normal;word-spacing:0px;float:none;background-color:rgb(255,255,255);">Ploppable (<abbr title="Mayor Mode Ploppable">MMP</abbr>)</span>. The props are tropical plants, palms and trees.
@@ -234,7 +234,7 @@ assets:
   simtropolis/3181-edificio-claude-debussy:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-06T02:12:36Z
     name: Edificio Claude Debussy
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2004/thumb-68522f464042991d129bc6990a8db1a0-claudedebussy.jpg
@@ -242,7 +242,7 @@ assets:
   simtropolis/3243-brasil-museu-oscar-niemeyer-curitiba:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-10T10:42:42Z
     name: Brasil Museu Oscar Niemeyer Curitiba
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2004/thumb-29a6b7bfb4056b850a5edb5d9005c899-promomon.jpg
@@ -250,7 +250,7 @@ assets:
   simtropolis/32863-laws-and-big-monthly-money:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-09-22T18:24:01Z
     name: Laws and Big Monthly Money
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2019_04/5cb264dd951be_image1.thumb.png.8f3a47491d6697902ec06aad7e2b929f.png
@@ -258,7 +258,7 @@ assets:
   simtropolis/3304-brasil-mc-donalds:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:53:54Z
     name: Brasil Mc Donalds
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2004/thumb-7aad3fe29ff9beb50aec567732c4684c-macdobr.jpg
@@ -266,7 +266,7 @@ assets:
   simtropolis/3453-park-sidewalk:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-10T11:21:22Z
     name: Park Sidewalk
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2004/thumb-35d0ba33ed978c157213c13d0ab21804-parquedia2.jpg
@@ -274,7 +274,7 @@ assets:
   simtropolis/3519-copacabana-beach:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:53:58Z
     name: Copacabana Beach
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2004/thumb-ebaabfe574d22d2ab8cbd9e4b38b0eea-copapropagandaprincipal.jpg
@@ -282,7 +282,7 @@ assets:
   simtropolis/3559-copacabana-beach-addon-1-sports:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2020-10-26T03:53:59Z
     name: Copacabana Beach Addon 1 Sports
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2004/thumb-81038d99fa41da94ee9c8cd1be01cc82-copaaddoningles.jpg
@@ -290,10 +290,10 @@ assets:
   simtropolis/4585-farms-fences:
     authors:
       - SUICO
-    category: 0
+    category: mods
     lastModified: 2018-05-02T01:58:23Z
     name: Farms Fences
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2004/thumb-283a03e42dfa59d5f755cf0f97f1841c-cercapromo1.jpg
     url: https://community.simtropolis.com/files/file/4585-farms-fences/
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
