--- a/src/scripts/data/assets/simtropolis/73-workingman-productions-wmp.yaml
+++ b/src/scripts/data/assets/simtropolis/73-workingman-productions-wmp.yaml
@@ -2,7 +2,7 @@ assets:
   simtropolis/26088-wmp-murimk-causeway-set:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-06-15T15:52:41Z
     name: WMP-Murimk Causeway Set
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/5ee12424733f9_WMPCausewayLrg.thumb.jpg.02778e083f1fcd24f4b107a777258437.jpg
@@ -10,7 +10,7 @@ assets:
   simtropolis/26125-wmp-murimk-boardwalk:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-06-17T00:12:23Z
     name: WMP-Murimk Boardwalk
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/wmp_boardwalk_LRG.thumb.jpg.7ecd8eee376a1aa68e8e9f0a6c28d9e0.jpg
@@ -18,13 +18,12 @@ assets:
   simtropolis/26171-wmp-the-bridges-of-shoreline-county:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     dependencies:
       - simtropolis/33620-wmp-essentials-v101
       - simtropolis/33621-wmp-mega-props-vol-01-misc-general-props
     description: >-
       <body>
-                                  
 
 
 
@@ -50,7 +49,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The Bridges of Shoreline County, batte(re)d &amp; lotted by DocRorlach WorkingMan BATtery
       </p>
@@ -193,7 +193,7 @@ assets:
   simtropolis/26192-wmp-covered-rail-bridges:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-05-22T12:19:09Z
     name: WMP Covered Rail Bridges
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2011/thumb-3d380f88566586ed0466b9ff6fd490c2-rail-bridges01.jpg
@@ -201,7 +201,7 @@ assets:
   simtropolis/26256-wmp-flying-pig-freight-depots:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-05-22T22:31:27Z
     name: WMP Flying Pig Freight Depots
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2011/thumb-4113b63cb1f0c8d89804b2d66f966093-fp_rail05.jpg
@@ -209,7 +209,7 @@ assets:
   simtropolis/26320-wmp-central-station-grey:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-10-05T17:49:36Z
     name: WMP Central Station (Grey)
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_10_2011/thumb-da9cdb90e722e8458a6e47da6222478c-wmp_cstation03.jpg
@@ -217,7 +217,7 @@ assets:
   simtropolis/26369-wmp-flying-pig-passenger-stations:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-06-22T08:12:41Z
     name: WMP Flying Pig Passenger Stations
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2011/thumb-34eeea2852248508984fd8c9ae814c1e-stanton_detail.jpg
@@ -225,7 +225,7 @@ assets:
   simtropolis/26376-wmp-power-lots:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-08-30T00:55:21Z
     name: WMP Power Lots
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2011/thumb-e926eab9d7a40069e6e891d8549db790-powerlots04.jpg
@@ -233,7 +233,7 @@ assets:
   simtropolis/26398-wmp-tenbrook-estate:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-06-25T10:09:43Z
     name: WMP TenBrook Estate
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2011/thumb-e5412081fdf411134b365620719c6e57-tenbrook11.jpg
@@ -241,7 +241,7 @@ assets:
   simtropolis/26426-wmp-flying-pig-sugar-shacks:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-06-30T15:16:30Z
     name: WMP Flying Pig Sugar Shacks
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2011/thumb-9b412d6223e72152aacdd589fe13998c-sshack01.jpg
@@ -249,7 +249,7 @@ assets:
   simtropolis/26504-wmp-flying-pig-allotment-garden-and-pathes-set:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2017-08-17T22:09:39Z
     name: WMP Flying Pig Allotment Garden and Pathes Set
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2011/thumb-9211ba19968d73eac235295501a3582a-allot_stex.jpg
@@ -257,7 +257,7 @@ assets:
   simtropolis/26541-wmp-abteibruecke-cloister-bridge:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-06-17T00:12:39Z
     name: WMP Abteibruecke (Cloister Bridge)
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/5ee95e3b1765d_WMPAbteiBrueckeLrg.thumb.jpg.ae2a7ba542295e0e3e7742e649a8b334.jpg
@@ -265,7 +265,7 @@ assets:
   simtropolis/26542-wmp-abtei-rowing-club-arc-by-docrorlach:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-06-10T00:20:19Z
     name: WMP Abtei Rowing Club (ARC) by DocRorlach
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/wmp_abtei_rowing_club_Lrg.thumb.jpg.059dabd2e189928ae33e0be568f18b3c.jpg
@@ -273,7 +273,7 @@ assets:
   simtropolis/26684-wmp-road-ferry:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-08-24T23:09:25Z
     name: WMP Road Ferry
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2011/thumb-22c27887c099340a35c0ca2190db9498-road_ferry.jpg
@@ -281,7 +281,7 @@ assets:
   simtropolis/26687-wmp-street-ferry:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-08-25T22:49:53Z
     name: WMP Street Ferry
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2011/thumb-26a3f0c59f8eff7de541afe78025163f-street_ferry03.jpg
@@ -289,7 +289,7 @@ assets:
   simtropolis/26696-wmp-truck-ferry:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-08-30T18:52:13Z
     name: WMP Truck Ferry
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2011/thumb-82c27e48424eee1dbde160b43bbd0245-truck-ferry01.jpg
@@ -297,7 +297,7 @@ assets:
   simtropolis/26769-wmp-rail-ferries:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-09-14T22:29:04Z
     name: WMP Rail Ferries
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_09_2011/thumb-7651035a61ea8f20cbb79ed47e207f22-rferries03.jpg
@@ -305,7 +305,7 @@ assets:
   simtropolis/26837-wmp-rural-docklands-base-set:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-07-28T15:27:26Z
     name: WMP Rural Docklands - Base Set
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2012/thumb-e97247e9f72e4fc7a0cf7e0d083d3bb4-wmp_docks_med.jpg
@@ -313,7 +313,7 @@ assets:
   simtropolis/26838-wmp-rural-docklands-optional-set-ii:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-10-03T07:19:50Z
     name: WMP Rural Docklands - Optional Set II
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_10_2011/thumb-6ba0b5b2b95388c5b856bfb51d60915f-wmp_harbour_med.jpg
@@ -321,7 +321,7 @@ assets:
   simtropolis/26946-wmp-tunnel-portals:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-06-09T01:01:02Z
     name: WMP Tunnel Portals
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/5ededd0a0bd52_WMPTunnelsLg.thumb.jpg.6329fb414f59b2f53e2552d62b9559b0.jpg
@@ -329,7 +329,7 @@ assets:
   simtropolis/26965-wmp-art-deco-station:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2011-11-15T16:49:12Z
     name: WMP Art Deco Station
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2011/thumb-2a600d9f0c927c0e2998460145fa2779-ad_station_anatomy.jpg
@@ -337,7 +337,7 @@ assets:
   simtropolis/27295-wmp-monorail-system-unfinished-by-docrorlach:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2020-06-10T12:29:02Z
     name: WMP Monorail System (Unfinished) by DocRorlach
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/5ee0cfa3b3871_WMPMonorailSystemLrg.thumb.jpg.025e229f04cc5653de519bf1b63987bf.jpg
@@ -345,7 +345,7 @@ assets:
   simtropolis/27302-the-rectangle-roundhouse-wmp-railyard:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-02-23T12:46:03Z
     name: The Rectangle Roundhouse (WMP Railyard)
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_02_2012/thumb-1cd67933ddc8043282674b7ad33f8447-railyard02.jpg
@@ -353,7 +353,7 @@ assets:
   simtropolis/27578-rfy-viaducts:
     authors:
       - pLynn
-    category: 0
+    category: mods
     lastModified: 2020-06-16T09:25:25Z
     name: RFY Viaducts
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/5ee8139e8c867_rfy_viaductsLrg.thumb.jpg.a6ee902ba302f0f164390afe87738753.jpg
@@ -361,7 +361,7 @@ assets:
   simtropolis/27762-wmp-ethanol-plant-a:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-06-30T13:04:40Z
     name: WMP Ethanol Plant A
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2012/thumb-f3429d949924d68d513929457adc4a7d-.jpg
@@ -369,7 +369,7 @@ assets:
   simtropolis/27775-wmp-grain-freight-depot:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-06-30T20:18:54Z
     name: WMP Grain Freight Depot
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2012/thumb-b8677f3373dd2e38c3d3a5eed89a8046-.jpg
@@ -377,7 +377,7 @@ assets:
   simtropolis/27868-wmp-spam-veterinary-clinic:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-07-28T17:12:03Z
     name: WMP SPAM Veterinary Clinic
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2012/thumb-d187e2e8641e33a9f1fc68f11afd1b92-wmp_vet01.jpg
@@ -385,7 +385,7 @@ assets:
   simtropolis/27869-wmp-spam-distillery:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-07-23T21:53:35Z
     name: WMP SPAM Distillery
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2012/thumb-e06580f48b7da5c92c0b219847329e35-wmp_distillery.jpg
@@ -393,7 +393,7 @@ assets:
   simtropolis/27880-patagonian-feed-farm-supplies:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-07-28T17:56:41Z
     name: Patagonian Feed & Farm Supplies
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2012/thumb-2bb7ca1591c7f39cf52b79458dc0ccc2-spam_store.jpg
@@ -401,7 +401,7 @@ assets:
   simtropolis/27900-the-crown-at-the-mill-pub:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-08-01T12:46:37Z
     name: The Crown at the Mill Pub
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2012/thumb-7b37efb5e4dfd8578b9128a8e8bf46dd-mill_pub01.jpg
@@ -409,7 +409,7 @@ assets:
   simtropolis/27990-wmp-rural-docklands-3:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     lastModified: 2012-09-05T21:13:37Z
     name: WMP Rural Docklands 3
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_09_2012/thumb-f270ed1a8a2b053f5ac733a968b4ee15-dockland3_03.jpg
@@ -417,11 +417,10 @@ assets:
   simtropolis/28015-the-cougar-fruit-packing-ltd:
     authors:
       - d_j_p1
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
 
 
 
@@ -432,7 +431,8 @@ assets:
 
 
 
-      							
+
+
       <p>The Cougar Fruit Packing Ltd. is the latest in the WMP <abbr title="SimPeg Agricultural Mod">SPAM</abbr> Workplaces series. Formerly an independent family concern, it was acquired by a global
       food brand in the late eighties and, during season, ships several local apple varieties from the local orchards to markets world-wide.</p>
 
@@ -527,11 +527,11 @@ assets:
   simtropolis/33620-wmp-essentials-v101:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -560,7 +560,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -586,7 +585,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The<strong> WMP Essentials v1.0</strong> is a <strong><span style="color:#c0392b;">must have dependency pack</span></strong> for all the previously released WMP custom contents by <strong>DocRorlach</strong>. It completely replaces the previously released wmp_dummies.dat file.<br>
       	<br>
@@ -698,11 +698,11 @@ assets:
   simtropolis/33621-wmp-mega-props-vol-01-misc-general-props:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -731,7 +731,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -757,7 +756,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The <strong>WMP Mega Props vol. 01</strong> is the first dependency pack, which superseds many of the previously released single, individual WMP prop packs by <strong>DocRorlach</strong>. <br>
       	<br>
@@ -850,11 +850,11 @@ assets:
   simtropolis/33622-wmp-mega-props-vol-02-misc-industrial-props:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -867,7 +867,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -877,7 +876,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The <strong>WMP Mega Props vol. 02</strong> is the second dependency pack, which superseds many of the previously released single, individual WMP prop packs by <strong>DocRorlach</strong>.<br>
       	<br>
@@ -969,11 +969,10 @@ assets:
   simtropolis/33623-wmp-mega-props-vol-03-port-autority-ferry:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
 
 
 
@@ -982,7 +981,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The <strong>WMP Mega Props vol. 03</strong> is the third dependency pack, which superseds many of the previously released single, individual WMP prop packs by <strong>DocRorlach</strong>.<br>
       	<br>
@@ -1066,11 +1066,11 @@ assets:
   simtropolis/33624-wmp-mega-props-vol-04-port-autority-seawalls:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -1082,7 +1082,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -1091,7 +1090,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The <strong>WMP Mega Props vol. 04</strong> is the forth dependency pack, which superseds many of the previously released single, individual WMP prop packs by <strong>DocRorlach</strong>.<br>
       	<br>
@@ -1177,11 +1177,11 @@ assets:
   simtropolis/33625-wmp-mega-props-vol-05-railway-props:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -1193,7 +1193,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -1202,7 +1201,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	The <strong>WMP Mega Props vol. 05</strong> is the fifth dependency pack, which superseds many of the previously released single, individual WMP prop packs by <strong>DocRorlach</strong>.<br>
       	<br>
@@ -1291,12 +1291,12 @@ assets:
   simtropolis/33626-wmp-mega-textures-v102:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     dependencies:
       - simtropolis/33620-wmp-essentials-v101
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -1325,7 +1325,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -1351,7 +1350,8 @@ assets:
 
 
 
-      							
+
+
       <p>
       	<strong>WMP Mega Textures v1.02</strong> is a dependency pack, which superseds many of the previously released single, individual WMP texture packs and the previous WMP Mega Textures by <strong>DocRorlach</strong>.<br>
       	<br>
@@ -1442,7 +1442,7 @@ assets:
   simtropolis/33627-rfy-mega-props-vol-01:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     lastModified: 2020-05-25T15:36:41Z
     name: RFY Mega Props Vol. 01
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_05/5ecbe608d42ae_RFYMegaPropsVol_01.thumb.jpg.9ae176c96e1abad36b10a59e7278d444.jpg
@@ -1450,10 +1450,10 @@ assets:
   simtropolis/33653-wmp-causeway-tutorial:
     authors:
       - STEX Custodian
-    category: 0
+    category: mods
     lastModified: 2020-06-17T10:43:56Z
     name: WMP Causeway Tutorial
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2020_06/5ee9f3ec87861_WMP-CausewayTutorialLRG.thumb.jpg.a2265144f8eb2e2d7f6ea687fb88bd75.jpg
     url: https://community.simtropolis.com/files/file/33653-wmp-causeway-tutorial/
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
