--- a/src/scripts/data/assets/sc4evermore/13-industrial.yaml
+++ b/src/scripts/data/assets/sc4evermore/13-industrial.yaml
@@ -2,8 +2,8 @@ assets:
   sc4evermore/114-sc4d-lex-legacy-mattb325-industrial-pack-dark-nite:
     authors:
       - Mattb325
-    category: 400
-    downloads: 771
+    category: industry
+    downloads: 773
     lastModified: 2023-08-21T04:21:24-07:00
     name: SC4D LEX Legacy - Mattb325 Industrial Pack (Dark Nite)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/GSK_s0.jpg
@@ -11,8 +11,8 @@ assets:
   sc4evermore/115-sc4d-lex-legacy-mattb325-industrial-pack-maxis-nite:
     authors:
       - Mattb325
-    category: 400
-    downloads: 732
+    category: industry
+    downloads: 735
     lastModified: 2023-08-20T02:40:24-07:00
     name: SC4D LEX Legacy - Mattb325 Industrial Pack (Maxis Nite)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/GSK_s.jpg
@@ -20,24 +20,24 @@ assets:
   sc4evermore/129-sc4d-lex-legacy-mattb325-irm-industrial-pack-dark-nite:
     authors:
       - Mattb325
-    category: 400
-    downloads: 863
+    category: industry
+    downloads: 866
     lastModified: 2023-11-11T08:15:13-08:00
     name: SC4D LEX Legacy - Mattb325 IRM Industrial Pack (Dark Nite)
     url: https://www.sc4evermore.com/index.php/downloads/download/13-industrial/129-sc4d-lex-legacy-mattb325-irm-industrial-pack-dark-nite
   sc4evermore/130-sc4d-lex-legacy-mattb325-irm-industrial-pack-maxis-nite:
     authors:
       - Mattb325
-    category: 400
-    downloads: 735
+    category: industry
+    downloads: 739
     lastModified: 2023-08-20T03:50:05-07:00
     name: SC4D LEX Legacy - Mattb325 IRM Industrial Pack (Maxis Nite)
     url: https://www.sc4evermore.com/index.php/downloads/download/13-industrial/130-sc4d-lex-legacy-mattb325-irm-industrial-pack-maxis-nite
   sc4evermore/140-sc4d-lex-legacy-zero7-industrial-pack:
     authors:
       - zero7
-    category: 400
-    downloads: 611
+    category: industry
+    downloads: 613
     lastModified: 2023-08-26T23:54:05-07:00
     name: SC4D LEX Legacy - zero7 Industrial Pack
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Z7_K2Distribution_Day.jpg
@@ -45,8 +45,8 @@ assets:
   sc4evermore/141-sc4d-lex-legacy-zero7-industrial-pack-irm-edition:
     authors:
       - zero7
-    category: 400
-    downloads: 666
+    category: industry
+    downloads: 669
     lastModified: 2023-11-11T08:02:18-08:00
     name: SC4D LEX Legacy - zero7 Industrial Pack - IRM Edition
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Z7_K2Distribution_Day0.jpg
@@ -54,8 +54,8 @@ assets:
   sc4evermore/169-sc4d-lex-legacy-bsc-marcszar-industrial-compilation:
     authors:
       - Marcszar
-    category: 400
-    downloads: 419
+    category: industry
+    downloads: 421
     lastModified: 2023-11-11T08:08:19-08:00
     name: SC4D LEX Legacy - BSC Marcszar Industrial Compilation
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Colemans_LEX_Screenshot1.jpg
@@ -63,11 +63,11 @@ assets:
   sc4evermore/170-sc4d-lex-legacy-bsc-marcszar-industrial-compilation-irm-version:
     authors:
       - sc4evermore
-    category: 400
-    downloads: 472
+    category: industry
+    downloads: 477
     lastModified: 2023-11-11T08:09:51-08:00
     name: SC4D LEX Legacy - BSC Marcszar Industrial Compilation (IRM Version)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Colemans_LEX_Screenshot10.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/13-industrial/170-sc4d-lex-legacy-bsc-marcszar-industrial-compilation-irm-version
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
