--- a/src/scripts/data/assets/sc4evermore/16-civic.yaml
+++ b/src/scripts/data/assets/sc4evermore/16-civic.yaml
@@ -2,8 +2,8 @@ assets:
   sc4evermore/116-sc4d-lex-legacy-mattb325-civics-and-rewards-dark-nite:
     authors:
       - Mattb325
-    category: 600
-    downloads: 974
+    category: civics
+    downloads: 976
     lastModified: 2023-08-20T02:40:33-07:00
     name: SC4D LEX Legacy - Mattb325 Civics and Rewards (Dark Nite)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/ModernLibrary_lg.jpg
@@ -11,8 +11,8 @@ assets:
   sc4evermore/117-sc4d-lex-legacy-mattb325-civics-and-rewards-maxis-nite:
     authors:
       - Mattb325
-    category: 600
-    downloads: 894
+    category: civics
+    downloads: 897
     lastModified: 2023-08-20T02:38:42-07:00
     name: SC4D LEX Legacy - Mattb325 Civics and Rewards (Maxis Nite)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/ModernLibrary_lg0.jpg
@@ -20,11 +20,11 @@ assets:
   sc4evermore/136-sc4d-lex-legacy-jbsimio-education-compilation:
     authors:
       - JBSimio
-    category: 600
-    downloads: 1301
+    category: civics
+    downloads: 1304
     lastModified: 2023-08-24T05:07:10-07:00
     name: SC4D LEX Legacy - JBSimio Education Compilation
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Clayhurst_EP1_Readme.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/16-civic/136-sc4d-lex-legacy-jbsimio-education-compilation
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
