--- a/src/scripts/data/assets/sc4evermore/18-reward.yaml
+++ b/src/scripts/data/assets/sc4evermore/18-reward.yaml
@@ -2,11 +2,11 @@ assets:
   sc4evermore/227-bsc-vip-girafe-mattb325-moscow-christ-the-saviour-cathedral:
     authors:
       - Girafe
-    category: 600
-    downloads: 236
+    category: rewards
+    downloads: 239
     lastModified: 2024-01-22T09:20:29-08:00
     name: BSC-VIP Girafe-Mattb325 Moscow Christ The Saviour Cathedral
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Icon_Grfe_CTS_s.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/18-reward/227-bsc-vip-girafe-mattb325-moscow-christ-the-saviour-cathedral
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
