--- a/src/scripts/data/assets/sc4evermore/26-gameplay-mods.yaml
+++ b/src/scripts/data/assets/sc4evermore/26-gameplay-mods.yaml
@@ -2,8 +2,8 @@ assets:
   sc4evermore/126-gizmo-simmars-ui:
     authors:
       - Gizmo
-    category: 30
-    downloads: 243
+    category: gameplay
+    downloads: 246
     lastModified: 2023-08-17T12:13:10-07:00
     name: Gizmo - SIMMARS UI
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/marsui.png
@@ -11,8 +11,8 @@ assets:
   sc4evermore/144-bsc-daeley-regional-tracking-mod:
     authors:
       - Daeley
-    category: 30
-    downloads: 330
+    category: gameplay
+    downloads: 332
     lastModified: 2023-09-03T01:45:19-07:00
     name: BSC Daeley Regional Tracking Mod
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/BSCFmod_LEX01.jpg
@@ -20,8 +20,8 @@ assets:
   sc4evermore/145-bsc-daeley-shady-banking:
     authors:
       - Daeley
-    category: 30
-    downloads: 273
+    category: gameplay
+    downloads: 275
     lastModified: 2023-09-04T18:40:50-07:00
     name: BSC Daeley Shady Banking
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/shadybanking_s.jpg
@@ -29,8 +29,8 @@ assets:
   sc4evermore/146-bsc-funding-mod-sandbox-mode-switch:
     authors:
       - Daeley
-    category: 30
-    downloads: 422
+    category: gameplay
+    downloads: 424
     lastModified: 2023-09-04T18:35:11-07:00
     name: BSC Funding Mod (Sandbox Mode Switch)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/BSCFundingLEX.jpg
@@ -38,40 +38,40 @@ assets:
   sc4evermore/156-sc4d-lex-legacy-jenex-aurora-jupiter-poseidon:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 493
+    category: gameplay
+    downloads: 498
     lastModified: 2023-09-15T16:39:04-07:00
     name: SC4D LEX Legacy - JENEX AURORA-JUPITER-POSEIDON
     url: https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/156-sc4d-lex-legacy-jenex-aurora-jupiter-poseidon
   sc4evermore/159-enn-sky-background-mod-set:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 368
+    category: gameplay
+    downloads: 370
     lastModified: 2023-09-20T15:42:12-07:00
     name: ENN Sky Background Mod Set
     url: https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/159-enn-sky-background-mod-set
   sc4evermore/198-swamper77s-no-palms-mod:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 160
+    category: gameplay
+    downloads: 163
     lastModified: 2023-11-22T17:07:31-08:00
     name: Swamper77's No Palms Mod
     url: https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/198-swamper77s-no-palms-mod
   sc4evermore/26-bsc-no-maxis:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 460
+    category: gameplay
+    downloads: 465
     lastModified: 2023-10-09T11:34:22-07:00
     name: BSC No Maxis
     url: https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/26-bsc-no-maxis
   sc4evermore/272-colossus-addon-mod-v-2-5-legacy-controller:
     authors:
       - Invischem
-    category: 30
-    downloads: 224
+    category: gameplay
+    downloads: 226
     lastModified: 2024-04-30T12:32:32-07:00
     name: Colossus Addon Mod (V 2.5) - Legacy Controller
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/sidebar.png
@@ -79,9 +79,9 @@ assets:
   sc4evermore/276-colossus-addon-mod-2-5-release-candidate-1:
     authors:
       - sc4evermore
-    category: 30
+    category: gameplay
     dependencies: []
-    downloads: 546
+    downloads: 551
     filename: Colossus Addon Mod V 2.5 RC 1.zip
     files:
       - UpgradeableCityHalls.dll
@@ -121,7 +121,7 @@ assets:
   sc4evermore/51-colossus-addon-mod-version-2-1-0-windows-by-invisichem:
     authors:
       - InvisiChem
-    category: 30
+    category: gameplay
     dependencies: []
     description: "<body>\r
 
@@ -207,7 +207,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 1688
+    downloads: 1693
     filename: Colossus Addon Mod 2.1.0a Windows Installer v2.zip
     files:
       - CAM_2.1.0_Main_Controller.dat
@@ -303,10 +303,10 @@ assets:
   sc4evermore/52-colossus-addon-mod-version-2-1-0a-mac-by-invisichem:
     authors:
       - InvisiChem
-    category: 30
-    downloads: 408
+    category: gameplay
+    downloads: 411
     lastModified: 2023-07-25T19:35:58-07:00
     name: Colossus Addon Mod (CAM) Version 2.1.0a [Mac] by InvisiChem
     url: https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/52-colossus-addon-mod-version-2-1-0a-mac-by-invisichem
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
