--- a/src/scripts/data/assets/sc4evermore/38-other-mods.yaml
+++ b/src/scripts/data/assets/sc4evermore/38-other-mods.yaml
@@ -2,15 +2,15 @@ assets:
   sc4evermore/42-bird-pesticides-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
-    downloads: 179
+    category: mods
+    downloads: 183
     lastModified: 2023-07-25T03:30:42-07:00
     name: Bird Pesticides Mod by RippleJet
     url: https://www.sc4evermore.com/index.php/downloads/download/38-other-mods/42-bird-pesticides-mod-by-ripplejet
   sc4evermore/43-disable-bridge-wash-effect-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -45,7 +45,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 209
+    downloads: 212
     filename: BSC RJ Disable Bridge Wash Effect 1.1.zip
     files:
       - _Documents/RJ Disable Bridge Wash/RJ - Disable Bridge Wash_readme.txt
@@ -63,7 +63,7 @@ assets:
   sc4evermore/44-block-maxis-hanggliders-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -93,7 +93,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 214
+    downloads: 217
     filename: BSC RJ Block Maxis Hangglider 1.0.zip
     files:
       - _Documents/RJ Block Maxis Hangglider/RJ - Block Maxis Hangglider_readme.txt
@@ -111,7 +111,7 @@ assets:
   sc4evermore/45-block-road-barriers-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -143,7 +143,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 244
+    downloads: 247
     filename: BSC RJ Block Road Barriers 1.0.zip
     files:
       - _Documents/RJ Block Road Barriers/RJ - Block Road Barriers.jpg
@@ -161,7 +161,7 @@ assets:
   sc4evermore/46-brighter-street-lights-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -189,7 +189,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 289
+    downloads: 294
     filename: BSC RJ Brighter $$$ Street Lights 1.0.zip
     files:
       - _Documents/RJ Brighter $$$ Lights/RJ - Brighter $$$ Lights_readme.txt
@@ -207,7 +207,7 @@ assets:
   sc4evermore/47-ghostbusters-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -236,7 +236,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 196
+    downloads: 199
     filename: BSC RJ Ghostbusters 1.0.zip
     files:
       - Z___BSC Mods/RJ MODs/RJ - Ghostbusters 1.0.dat
@@ -254,7 +254,7 @@ assets:
   sc4evermore/48-longer-night-lights-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -285,7 +285,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 255
+    downloads: 258
     filename: BSC RJ Longer Night Lights 1.0.zip
     files:
       - _Documents/RJ Longer Night Lights/RJ - Longer Night Lights 1.0_readme.txt
@@ -303,7 +303,7 @@ assets:
   sc4evermore/49-toilet-paper-free-toilet-paper-tree-mod-by-ripplejet:
     authors:
       - sc4evermore
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -332,7 +332,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 206
+    downloads: 209
     filename: BSC RJ Toilet Paper Free Toilet Paper Tree.zip
     files:
       - Z___BSC Mods/RJ MODs/RJ - Toilet Paper Free Toilet Paper Tree 1.0.dat
@@ -350,15 +350,15 @@ assets:
   sc4evermore/61-daeleys-advanced-menu-navigator-damn:
     authors:
       - daeley
-    category: 30
-    downloads: 335
+    category: mods
+    downloads: 339
     lastModified: 2024-02-27T12:25:41-08:00
     name: Daeley's Advanced Menu Navigator (DAMN)
     url: https://www.sc4evermore.com/index.php/downloads/download/38-other-mods/61-daeleys-advanced-menu-navigator-damn
   sc4evermore/62-day-night-mod-by-gizmo28:
     authors:
       - gizmo28
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -406,7 +406,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 375
+    downloads: 378
     filename: Gizmo - Day-Night Mod v2.0.zip
     files:
       - ~Documents/Gizmo_Readmes/Read Me_Day-Night Mod.htm
@@ -425,7 +425,7 @@ assets:
   sc4evermore/63-ground-fog-effect-by-gizmo28:
     authors:
       - gizmo28
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -446,7 +446,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 257
+    downloads: 260
     filename: Gizmo - Ground Fog v1.0.zip
     files:
       - ~Documents/Gizmo_Readmes/Read Me_Ground Fog.htm
@@ -464,7 +464,7 @@ assets:
   sc4evermore/65-weather-effects-mod-by-gizmo28:
     authors:
       - gizmo28
-    category: 30
+    category: mods
     dependencies: []
     description: "<body>\r
 
@@ -633,7 +633,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 324
+    downloads: 327
     filename: Gizmo - Weather Effect Mod v1.0.zip
     files:
       - ~Documents/Gizmo_Readmes/weather.png
@@ -649,4 +649,4 @@ assets:
     url: https://www.sc4evermore.com/index.php/downloads/download/38-other-mods/65-weather-effects-mod-by-gizmo28
     version: "1.0"
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
