--- a/src/scripts/data/assets/sc4evermore/43-agriculture.yaml
+++ b/src/scripts/data/assets/sc4evermore/43-agriculture.yaml
@@ -2,11 +2,11 @@ assets:
   sc4evermore/210-bsc-vip-girafe-agripack-vol01-v2:
     authors:
       - Girafe
-    category: 410
-    downloads: 307
+    category: agriculture
+    downloads: 309
     lastModified: 2024-01-20T08:42:09-08:00
     name: BSC-VIP Girafe Agripack Vol01 v2
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Image_agripack_2.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/43-agriculture/210-bsc-vip-girafe-agripack-vol01-v2
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
