--- a/src/scripts/data/assets/sc4evermore/6-network-addon-mod-nam.yaml
+++ b/src/scripts/data/assets/sc4evermore/6-network-addon-mod-nam.yaml
@@ -2,8 +2,8 @@ assets:
   sc4evermore/134-nam-park-and-ride-traffic-simulator-plugins:
     authors:
       - NAM
-    category: 7
-    downloads: 468
+    category: mods/nam
+    downloads: 472
     lastModified: 2023-08-30T02:18:07-07:00
     name: NAM Park And Ride Traffic Simulator Plugins
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/nam-park-and-ride-promo.jpg
@@ -11,9 +11,9 @@ assets:
   sc4evermore/2-network-addon-mod:
     authors:
       - NAM
-    category: 7
+    category: mods/nam
     dependencies: []
-    downloads: 9226
+    downloads: 9236
     filename: NetworkAddonMod_Setup_Version48.zip
     files:
       - sc4nam.com - NAM Documentation.url
@@ -997,9 +997,9 @@ assets:
   sc4evermore/40-nam-lite:
     authors:
       - NAM
-    category: 7
+    category: mods/nam
     dependencies: []
-    downloads: 1346
+    downloads: 1350
     filename: NetworkAddonMod_Lite_Setup_Version3.zip
     files:
       - sc4nam.com - NAM Documentation.url
@@ -1122,4 +1122,4 @@ assets:
     url: https://www.sc4evermore.com/index.php/downloads/download/6-network-addon-mod-nam/40-nam-lite
     version: "3"
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
