--- a/src/scripts/data/assets/simtropolis/36-spam-simpeg-agricultural-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/36-spam-simpeg-agricultural-mods.yaml
@@ -2,7 +2,7 @@ assets:
   simtropolis/11603-beets-plants-by-gshmails:
     authors:
       - Mary Maurine Mayo
-    category: 411
+    category: spam
     lastModified: 2005-02-04T08:50:48Z
     name: Beets Plants By GSHMAILS
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_02_2005/thumb-f446fbb583d1692b1e710150800cfa1a-beets_GSHMAILS.jpg
@@ -10,7 +10,7 @@ assets:
   simtropolis/11915-bsc-farms-sg-vol-01:
     authors:
       - SimGoober
-    category: 411
+    category: spam
     lastModified: 2005-03-11T07:50:18Z
     name: BSC Farms SG Vol 01
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2005/thumb-b2f373b4c67f239c804321f6bc1a3d9b-SG_FarmPack1_01.jpg
@@ -18,7 +18,7 @@ assets:
   simtropolis/11916-bsc-farm-fields-sg-vol-01:
     authors:
       - SimGoober
-    category: 411
+    category: spam
     lastModified: 2005-03-11T07:53:04Z
     name: BSC Farm Fields SG Vol 01
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2005/thumb-56d47ff2940dea231780e3ce61271d7a-SG_SeasonalFields_Vol01.jpg
@@ -26,7 +26,7 @@ assets:
   simtropolis/11917-bsc-farm-rewards-sg-vol-01:
     authors:
       - SimGoober
-    category: 411
+    category: spam
     lastModified: 2005-03-11T07:57:42Z
     name: BSC Farm Rewards SG Vol 01
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2005/thumb-e377ea9cfefb5e654f5e6dfb09aa011f-BSC%20Farm%20Rewards%20SG%20Vol01_01.jpg
@@ -34,11 +34,11 @@ assets:
   simtropolis/11935-bsc-farm-fields-sg-vol-02:
     authors:
       - SimGoober
-    category: 411
+    category: spam
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -46,12 +46,12 @@ assets:
 
 
 
-      							
 
 
 
 
-      							
+
+
       <p></p>
 
       <p><span><span></span></span>This is a second set of prop based farm fields, to offer more variations to the Sim farmers out there. These lots designed for use with a related farm. They will not
@@ -99,7 +99,7 @@ assets:
   simtropolis/11936-melonys-melon-farms:
     authors:
       - SimGoober
-    category: 411
+    category: spam
     lastModified: 2005-03-12T23:28:58Z
     name: Melonys Melon Farms
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2005/thumb-d64aa828e3f2bd3a0b8f0bf0b8f5840a-SG_Farm_Melonys01.jpg
@@ -107,7 +107,7 @@ assets:
   simtropolis/15358-schiffenberg-growable-farms:
     authors:
       - Kwakelaar
-    category: 411
+    category: spam
     lastModified: 2006-03-24T05:48:12Z
     name: Schiffenberg growable farms
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2006/thumb-8def0b7d7c1bf6641dcde6ddc5818ffb-STEX%20Schiffenberg%20farm%2011.jpg
@@ -115,7 +115,7 @@ assets:
   simtropolis/18515-the-potato-farm:
     authors:
       - dada222
-    category: 411
+    category: spam
     lastModified: 2007-08-08T03:33:22Z
     name: The Potato Farm
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2007/thumb-50bbb566471f361365d4ef647c43c3b7-farmstexup.JPG
@@ -123,7 +123,7 @@ assets:
   simtropolis/26078-peg-spam-traffic-mod-addon:
     authors:
       - Pegasus
-    category: 411
+    category: spam
     lastModified: 2022-02-05T14:17:53Z
     name: PEG SPAM Traffic MOD (AddOn)
     thumbnail: https://www.simtropolis.com/objects/screens/0031/thumb-9861c9663695dd8019b132525cbcd225-spam-tm_plex_480.jpg
@@ -131,11 +131,11 @@ assets:
   simtropolis/26079-peg-spam-super-resource-pack:
     authors:
       - Pegasus
-    category: 411
+    category: spam
     dependencies: []
     description: >-
       <body>
-                                  
+
       								<div style="position:absolute; top:0px; right:0px;">
                                         <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
       								</div>
@@ -162,7 +162,6 @@ assets:
 
 
 
-      							
 
 
 
@@ -186,7 +185,8 @@ assets:
 
 
 
-      							
+
+
       <p> </p><div style="text-align:center;"><p><span style="color:#FF0000;"><strong>NOTE: You do not need this pack if you</strong><strong>already downloaded / plan to download the
       full</strong><br><strong>SIMPEG AGRICULTURAL MOD (SPAM)!</strong></span><br><br>This package is the main dependency for all things SPAM - from the main mod to most of the current or future
       additional sets. This standalone version is meant for all players who do not want to use the full mod but still wish to play with lots and items that utilize these props and
@@ -224,7 +224,7 @@ assets:
   simtropolis/26084-spam-access-roads-spar:
     authors:
       - paeng
-    category: 411
+    category: spam
     lastModified: 2011-04-14T12:23:21Z
     name: SPAM Access Roads (SPAR)
     thumbnail: https://www.simtropolis.com/objects/screens/0030/thumb-47e499a7269580ffca3a83bd6a1a0972-spar01.jpg
@@ -232,7 +232,7 @@ assets:
   simtropolis/26094-spam-abcvs-growable-addon:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T10:48:00Z
     name: SPAM abcvs Growable AddOn
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-8d2f057bb735c55c25d088b2aa765dd8-pic03.jpg
@@ -240,7 +240,7 @@ assets:
   simtropolis/26098-spam-fire-landing-strip:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T10:44:47Z
     name: SPAM Fire Landing Strip
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-076ef5dc7d24cdfe0309408ec6a6163c-spam_firelanding.jpg
@@ -248,7 +248,7 @@ assets:
   simtropolis/26124-paengs-spam-addon-pack-vol01:
     authors:
       - paeng
-    category: 411
+    category: spam
     lastModified: 2019-12-10T20:25:16Z
     name: Paeng's SPAM Addon Pack Vol01
     thumbnail: https://www.simtropolis.com/objects/screens/0031/thumb-afa88c53bab6e0652f233251ae54c0a0-stex01.jpg
@@ -256,7 +256,7 @@ assets:
   simtropolis/26135-spam-farm-factory-abcvs-rural-module:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T10:03:55Z
     name: SPAM - F.A.R.M (Factory abcvs Rural Module)
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-586b01f26fd5b34f18b2fa38e2081cbc-spam-farm.jpg
@@ -264,7 +264,7 @@ assets:
   simtropolis/26145-spam-bus-stop:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T10:01:10Z
     name: SPAM Bus Stop
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-78eca239791905c043b8bd245e7a4afc-spambus1.jpg
@@ -272,7 +272,7 @@ assets:
   simtropolis/26158-spam-rump-rural-udderground-moo-vement-provider:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T09:56:21Z
     name: SPAM - R.U.M.P. (Rural Udderground Moo-vement Provider)
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-3bc5cdcf270819df1da4428d2e740105-spam_rump.jpg
@@ -280,7 +280,7 @@ assets:
   simtropolis/26178-paengs-spam-addon-pack-vol02:
     authors:
       - paeng
-    category: 411
+    category: spam
     lastModified: 2019-12-10T20:24:38Z
     name: Paeng's SPAM Addon Pack Vol02
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2011/thumb-e4f58c460e31ae99e3511b699c9b107a-spam-ao02_480.jpg
@@ -288,7 +288,7 @@ assets:
   simtropolis/26187-spam-rave-rural-ancillary-veterinary-extension:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T09:52:51Z
     name: SPAM - R.A.V.E. (Rural Ancillary Veterinary Extension)
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-a4200bed0e2aa462153ca3b260904f19-vet-rave800.jpg
@@ -296,7 +296,7 @@ assets:
   simtropolis/26190-murimk-farm-addons-for-spam-vol1-barns:
     authors:
       - murimk
-    category: 411
+    category: spam
     lastModified: 2019-12-10T20:45:31Z
     name: "Murimk Farm Addons for SPAM Vol1: Barns"
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2011/thumb-7db76ee5280d4fe7f4208255f535f9ba-stable_10.jpg
@@ -304,7 +304,7 @@ assets:
   simtropolis/26191-paengs-spam-riding-school-and-stables:
     authors:
       - paeng
-    category: 411
+    category: spam
     lastModified: 2019-12-10T20:44:00Z
     name: Paeng's SPAM Riding School and Stables
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2011/thumb-20fc682303a0be1afb320c8448611c8f-riding-school02.jpg
@@ -312,7 +312,7 @@ assets:
   simtropolis/26257-spam-farmers-market:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T09:46:34Z
     name: SPAM - Farmer's Market
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-c0ac57c8f4ac367363105d39bd280bb4-farmers_market-800.jpg
@@ -320,7 +320,7 @@ assets:
   simtropolis/26326-spam-chicken-ranch:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T09:43:53Z
     name: SPAM - Chicken Ranch
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-0885a8d2f2b670e0cd84ffeb70d7d9aa-spam_chicken_ranch.jpg
@@ -328,7 +328,7 @@ assets:
   simtropolis/26374-spam-single-diagonal-fields:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T09:41:44Z
     name: SPAM - Single & Diagonal Fields
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-f4f3a3d09ceaa1d7993aa522c7fee508-spam_ploppable_crops_800.jpg
@@ -336,7 +336,7 @@ assets:
   simtropolis/26474-murimk-farm-addons-for-spam-vol02-farmhouses:
     authors:
       - murimk
-    category: 411
+    category: spam
     lastModified: 2011-07-09T14:41:05Z
     name: "Murimk Farm Addons for SPAM Vol02: Farmhouses"
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2011/thumb-b3d4b1b0ebdee28fcff29242556c7e51-murimk_farm_addons_for_spam_vol2.jpg
@@ -344,7 +344,7 @@ assets:
   simtropolis/26477-paengs-spam-addon-pack-vol03-residentials:
     authors:
       - paeng
-    category: 411
+    category: spam
     lastModified: 2011-07-09T15:57:36Z
     name: "Paeng's SPAM Addon Pack Vol03: Residentials"
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2011/thumb-e7fcc299c32cf76ba6363dda446aeb58-growables.jpg
@@ -352,7 +352,7 @@ assets:
   simtropolis/27415-spam-mtp-growable-cabins:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T08:53:46Z
     name: SPAM-MTP Growable Cabins
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-5e22b083f380bf57908a227ddad44b16-spam-mtp_growable_cabins640.jpg
@@ -360,7 +360,7 @@ assets:
   simtropolis/27683-spam-mtp-growable-a-frames:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T08:51:33Z
     name: SPAM-MTP Growable A-Frames
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-b583ffb6c123c671371dbdaf4dcb44ba-mtp-spamgrowablea-frames_logo.jpg
@@ -368,7 +368,7 @@ assets:
   simtropolis/27964-wmp-spam-add-on-barns-vol01:
     authors:
       - paeng
-    category: 411
+    category: spam
     lastModified: 2015-12-21T15:57:39Z
     name: WMP SPAM Add-On Barns Vol01
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2012/thumb-6b31664cc32338d39e396a556e6012c9-wmp-spam-800.jpg
@@ -376,7 +376,7 @@ assets:
   simtropolis/29992-spam-mtp-growable-lodges:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-07-11T08:52:39Z
     name: SPAM-MTP Growable Lodges
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2014/thumb-646fecc1b01fea7e835e8e5e41b56f00-r5x5-2.jpg
@@ -384,7 +384,7 @@ assets:
   simtropolis/30676-spam-irrigation-canals:
     authors:
       - RebaLynnTS
-    category: 411
+    category: spam
     lastModified: 2015-07-15T05:21:13Z
     name: SPAM Irrigation Canals
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_07/SPAM-IC_Screen01_800-1.thumb.jpg.6f599b633b0efc49cb44123af2177803.jpg
@@ -392,7 +392,7 @@ assets:
   simtropolis/30713-spammar-spam-municipal-airport:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-08-05T05:18:34Z
     name: SPAMMAr - SPAM Municipal Airport
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_08/SPAMMAr_1.thumb.JPG.d5a4f7c0ca3af061731be3b3da5dc94f.JPG
@@ -400,7 +400,7 @@ assets:
   simtropolis/30714-spam-rural-passenger-station:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2018-07-19T02:33:13Z
     name: SPAM Rural Passenger Station
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_08/rural_rail_1.thumb.JPG.9e13344daa267fec1a53b3265d855054.JPG
@@ -408,7 +408,7 @@ assets:
   simtropolis/30715-spam-rural-rail-halt:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-08-05T05:52:27Z
     name: SPAM Rural Rail Halt
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_08/rural_train_2.thumb.JPG.3c20cf1b47e004beedcc8bf43180c84b.JPG
@@ -416,7 +416,7 @@ assets:
   simtropolis/30722-spam-small-landing-strip:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-08-07T09:46:52Z
     name: SPAM Small Landing Strip
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_08/small_landing_1.thumb.JPG.daf0eb4f66746b80fd85999b72ec5791.JPG
@@ -424,7 +424,7 @@ assets:
   simtropolis/30755-te-driveways-and-parking:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2019-10-10T03:54:46Z
     name: TE Driveways and Parking
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_08/dirt_driveway.thumb.JPG.5c4ad0dfb4f2e7903fddda0f17d10fdc.JPG
@@ -432,7 +432,7 @@ assets:
   simtropolis/30756-spam-high-school:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-08-27T03:22:48Z
     name: SPAM High School
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_08/spam_highschool.thumb.JPG.b48d523f4b3254533fa2dcce00e8367b.JPG
@@ -440,7 +440,7 @@ assets:
   simtropolis/30767-spam-school-bus-garage:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-09-03T08:36:18Z
     name: SPAM School Bus Garage
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_09/schoolbus_garage.thumb.JPG.72cf7464cdba04b92d1760460d968d52.JPG
@@ -448,7 +448,7 @@ assets:
   simtropolis/30778-spam-univaasity:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2015-09-09T20:36:31Z
     name: SPAM - Univaasity
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2015_09/university_2.thumb.JPG.86b86bcd72ac524afb81660786a51aa7.JPG
@@ -456,10 +456,10 @@ assets:
   simtropolis/33196-spam-commercial-growable-cs:
     authors:
       - Craig-Abcvs
-    category: 411
+    category: spam
     lastModified: 2020-02-07T16:25:09Z
     name: SPAM Commercial Growable - CS$
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2019_09/spam_commercial.thumb.png.ad594eb722442ef25838eece82b49e88.png
     url: https://community.simtropolis.com/files/file/33196-spam-commercial-growable-cs/
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
