--- a/src/scripts/data/assets/simtropolis/37-peg-utopian-series.yaml
+++ b/src/scripts/data/assets/simtropolis/37-peg-utopian-series.yaml
@@ -2,7 +2,7 @@ assets:
   simtropolis/11510-peg-solar-collector-1:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-11T04:20:53Z
     name: PEG Solar Collector 1
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2005/thumb-8932d8a5f86a65338317c83e1c0cb91a-product_image.jpg
@@ -10,7 +10,7 @@ assets:
   simtropolis/11571-peg-solar-collector-2:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2017-01-27T10:51:45Z
     name: PEG Solar Collector 2
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2005/thumb-e14f5f50e6e57c7b045a5732a04786d0-product_image.jpg
@@ -18,7 +18,7 @@ assets:
   simtropolis/11572-peg-solar-plant-3:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2017-01-27T10:48:38Z
     name: PEG Solar Plant 3
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2005/thumb-44dc34da7b8438eaf7e8a72ffc1a5fb7-product_image.jpg
@@ -26,7 +26,7 @@ assets:
   simtropolis/18462-peg-sf-sky-farm-i:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-09T20:04:14Z
     name: PEG SF SKY FARM I
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-addaf5c7ff4ae2ac44a0c187a7255ff0-product_image.jpg
@@ -34,7 +34,7 @@ assets:
   simtropolis/18463-peg-sf-sky-farm-ii:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2020-12-24T11:30:14Z
     name: PEG SF SKY FARM II
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-c90a234067bf11bc7e54fd7f5a6c98f7-product_image.jpg
@@ -42,7 +42,7 @@ assets:
   simtropolis/18464-peg-sf-sky-farm-iii:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-09T19:58:34Z
     name: PEG SF SKY FARM III
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-3e79c3e340c4af98f61b16f366baa276-product_image.jpg
@@ -50,7 +50,7 @@ assets:
   simtropolis/18465-peg-sf-sky-farm-iv:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-09T19:56:41Z
     name: PEG SF SKY FARM IV
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-7fad720e7dd8cdb50d578805f5c87405-product_image.jpg
@@ -58,7 +58,7 @@ assets:
   simtropolis/18466-peg-sf-sky-farm-resource-file:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-09T06:47:25Z
     name: PEG SF SKY FARM RESOURCE FILE
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-d5f0f19704c6ff14d96585d8885d4dea-product_image.jpg
@@ -66,7 +66,7 @@ assets:
   simtropolis/18501-peg-sf-sky-farm-v:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-09T06:40:54Z
     name: PEG SF SKY FARM V
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2007/thumb-835eb6a4621d6f90952614298cc9bb5f-product_image.jpg
@@ -74,7 +74,7 @@ assets:
   simtropolis/18576-peg-artificial-tree:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-09T06:30:36Z
     name: PEG Artificial Tree
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2007/thumb-2264fd09a953b40df5ebbcdf83d897b6-product_image.jpg
@@ -82,7 +82,7 @@ assets:
   simtropolis/20606-peg-ut-plasma-gasification-plant:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-08T01:09:48Z
     name: PEG UT Plasma Gasification Plant
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-6bad2df036e670e505b775c492c6e4a2-product_image.jpg
@@ -90,7 +90,7 @@ assets:
   simtropolis/20621-peg-ut-w2e-replacement-mod:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-08T01:03:27Z
     name: PEG UT W2E Replacement Mod
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-1c8e24ec2a7998ec579833d10608ca76-product_image.jpg
@@ -98,7 +98,7 @@ assets:
   simtropolis/20632-peg-ut-subway-station:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-08T01:00:33Z
     name: PEG UT Subway Station
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-c3ad81b31a9d632e17b35196e63716bf-product_image.jpg
@@ -106,7 +106,7 @@ assets:
   simtropolis/20633-peg-ut-small-plaza:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-08T00:58:50Z
     name: PEG UT Small Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-1ea336aadd5de5556ba38e7206c4953e-product_image.jpg
@@ -114,7 +114,7 @@ assets:
   simtropolis/20664-peg-ut-large-subway-plaza:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-08T00:54:41Z
     name: PEG UT Large Subway Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-b3c0840f508e99ff21561daa98b68726-product_image.jpg
@@ -122,7 +122,7 @@ assets:
   simtropolis/20702-peg-ut-mall-canal-resource-pack:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-08T00:49:45Z
     name: PEG UT Mall Canal Resource Pack
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-bd3d2512034af55e9dca333bc949d294-product_image.jpg
@@ -130,7 +130,7 @@ assets:
   simtropolis/20703-peg-ut-large-mall-canal:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:53:08Z
     name: PEG UT Large Mall Canal
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-354b088c6abe171838b04bfdb85f35d3-product_image.jpg
@@ -138,7 +138,7 @@ assets:
   simtropolis/20712-peg-ut-bus-stop:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:50:41Z
     name: PEG UT Bus Stop
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-911d69031015739d283c49e93b4e181a-product_image.jpg
@@ -146,7 +146,7 @@ assets:
   simtropolis/20713-peg-ut-large-plaza:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:46:19Z
     name: PEG UT Large Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-78cc224c83d7c5c8b585c2f95ae0cf64-product_image.jpg
@@ -154,7 +154,7 @@ assets:
   simtropolis/20723-peg-ut-medium-plaza:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:40:48Z
     name: PEG UT Medium Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-b272ddb97e70964b50b0c81ba8a07538-product_image.jpg
@@ -162,7 +162,7 @@ assets:
   simtropolis/20724-peg-ut-mall-canal-corner:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:36:41Z
     name: PEG UT Mall Canal Corner
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-a8140aa558c41719056f81b006441ed8-product_image.jpg
@@ -170,7 +170,7 @@ assets:
   simtropolis/20730-peg-ut-small-mall-canal:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:33:00Z
     name: PEG UT Small Mall Canal
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-d27892bb6b9c285f8741c60124a15d42-product_image.jpg
@@ -178,7 +178,7 @@ assets:
   simtropolis/20750-peg-ut-mall-canal-tee:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:28:50Z
     name: PEG UT Mall Canal Tee
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-8081134725fb4056fa5b4917481a7b02-product_image.jpg
@@ -186,7 +186,7 @@ assets:
   simtropolis/20751-pet-ut-mall-canal-plaza:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:25:57Z
     name: PET UT Mall Canal Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-d1d835f024f576feb1a20561cd85be08-product_image.jpg
@@ -194,7 +194,7 @@ assets:
   simtropolis/20755-peg-ut-mall-canal-bus-stop:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:23:42Z
     name: PEG UT Mall Canal Bus Stop
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-2745aabe09cacb387616aea4952284fe-product_image.jpg
@@ -202,7 +202,7 @@ assets:
   simtropolis/20778-peg-ut-medium-mall-canal:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:19:17Z
     name: PEG UT Medium Mall Canal
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-8e402ff53c21d5c3e0471aacf5b5f541-product_image.jpg
@@ -210,7 +210,7 @@ assets:
   simtropolis/20779-peg-ut-mall-canal-4way:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:16:59Z
     name: PEG UT Mall Canal 4way
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-8865e46af2f58191a32bd66fb5f77c75-product_image.jpg
@@ -218,7 +218,7 @@ assets:
   simtropolis/20780-peg-ut-mall-canal-end:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:13:10Z
     name: PEG UT Mall Canal End
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-3c9b6a4b1b36d4b3c7083e0560a47386-product_image.jpg
@@ -226,7 +226,7 @@ assets:
   simtropolis/20805-peg-ut-res-com-avenue-medians:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:08:39Z
     name: PEG UT RES COM Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-ed5e3c46059ffd371770910acb00074a-product_image.jpg
@@ -234,7 +234,7 @@ assets:
   simtropolis/20811-peg-ut-ind-avenue-medians:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:06:22Z
     name: PEG UT IND Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-5bd4d97d9d829f37d3a602cb41c0321d-product_image.jpg
@@ -242,7 +242,7 @@ assets:
   simtropolis/20818-peg-ut-seaport-avenue-medians:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:04:11Z
     name: PEG UT Seaport Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-3d07e1502d4eba54122950b0a28375f9-product_image.jpg
@@ -250,10 +250,10 @@ assets:
   simtropolis/20829-peg-ut-airport-avenue-medians:
     authors:
       - Pegasus
-    category: 600
+    category: civics
     lastModified: 2015-07-07T23:00:12Z
     name: PEG UT Airport Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-497ca39e1ea14b4357ff4a04bbb7a532-product_image.jpg
     url: https://community.simtropolis.com/files/file/20829-peg-ut-airport-avenue-medians/
 
-timestamp: 2024-08-19T05:43:53.512Z
+timestamp: 2024-08-20T10:45:45.232Z
